# ai-research-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  config.py
src/agents/: tool_agent.py
src/api/: dependencies.py  main.py  schemas.py
src/graph/: builder.py  nodes.py  state.py
src/ingestion/: chunker.py  loader.py
src/retrieval/: embeddings.py  rag_chain.py  vectorstore.py
tests/: test_api.py  test_graph.py  test_ingestion.py  test_rag.py
