[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "RAG-powered multi-agent research assistant (LangChain + LangGraph)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "langchain-community>=0.3.0,<0.4",
    "langchain-text-splitters>=0.3.0,<0.4",
    "langgraph>=0.2.0,<0.3",
    "langchain-tavily>=0.1.0,<0.2",
    "faiss-cpu>=1.8.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
